--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 
 before_script:
   - env | sort
-  - image="polisd:$VARIANT"
+  - image="dashd:$VARIANT"
 
 script:
   - docker build -t "$image" .
