--- a/bitcoin-sv/docker-compose.yml
+++ b/bitcoin-sv/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   bitcoin-sv:
+    build: .
     network_mode: "host"
     volumes:
       - 'bitcoin-sv-data:/bitcoin-sv'
@@ -9,7 +10,7 @@ services:
     logging:
       options:
         max-size: 1g
-    image: 'cryptocoindaemon:bitcoin-sv'
+    image: 'tjennerjahn/cryptocoindaemon:bitcoin-sv'
 volumes:
   bitcoin-sv-data:
     external: false
