--- a/energi/docker-compose.yml
+++ b/energi/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   energi:
+    build: .
     network_mode: "host"
     volumes:
       - 'energi-data:/energi'
@@ -9,7 +10,7 @@ services:
     logging:
       options:
         max-size: 1g
-    image: 'cryptocoindaemon:energi'
+    image: 'tjennerjahn/cryptocoindaemon:energi'
 volumes:
   energi-data:
     external: false
