--- a/safeinsure/docker-compose.yml
+++ b/safeinsure/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   safeinsure:
+    build: .
     network_mode: "host"
     volumes:
       - 'safeinsure-data:/safeinsure'
@@ -9,7 +10,7 @@ services:
     logging:
       options:
         max-size: 1g
-    image: 'cryptocoindaemon:safeinsure'
+    image: 'tjennerjahn/cryptocoindaemon:safeinsure'
 volumes:
   safeinsure-data:
     external: false
