--- a/wagerr/docker-compose.yml
+++ b/wagerr/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   wagerr:
+    build: .
     network_mode: "host"
     volumes:
       - 'wagerr-data:/wagerr'
@@ -9,7 +10,7 @@ services:
     logging:
       options:
         max-size: 1g
-    image: 'cryptocoindaemon:wagerr'
+    image: 'tjennerjahn/cryptocoindaemon:wagerr'
 volumes:
   wagerr-data:
     external: false
