--- a/xsn/docker-compose.yml
+++ b/xsn/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   xsn:
+    build: .
     network_mode: "host"
     volumes:
       - 'xsn-data:/xsn'
@@ -9,7 +10,7 @@ services:
     logging:
       options:
         max-size: 1g
-    image: 'cryptocoindaemon:xsn'
+    image: 'tjennerjahn/cryptocoindaemon:xsn'
 volumes:
   xsn-data:
     external: false
