--- a/zcash/docker-compose.yml
+++ b/zcash/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   zcash:
+    build: .
     network_mode: "host"
     volumes:
       - 'zcash-data:/zcash'
@@ -9,7 +10,7 @@ services:
     logging:
       options:
         max-size: 1g
-    image: 'cryptocoindaemon:zcash'
+    image: 'tjennerjahn/cryptocoindaemon:zcash'
 volumes:
   zcash-data:
     external: false
