--- a/pivx/docker-compose.yml
+++ b/pivx/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3'
 services:
-  polis:
-    build: .
+  pivx:
     network_mode: "host"
     volumes:
       - 'pivx-data:/pivx'
@@ -10,7 +9,15 @@ services:
     logging:
       options:
         max-size: 1g
-    image: 'cryptocoindaemon:polis'
+    image: 'tjennerjahn/cryptocoindaemon:pivx'
+  pivx_sync:
+    network_mode: "host"
+    container_name: pivx-sync
+    image: 'tjennerjahn/cryptocoindaemon:dbsync'
+    environment:
+      TASK_SCHEDULE: '* * * * *'
+      NPM_COMMAND: 'start'
+      COIN_NAME: 'pivx'
 volumes:
   pivx-data:
     external: false
