--- a/phore/docker-compose.yml
+++ b/phore/docker-compose.yml
@@ -11,6 +11,14 @@ services:
       options:
         max-size: 1g
     image: 'tjennerjahn/cryptocoindaemon:phore'
+  phore_sync:
+    network_mode: "host"
+    container_name: phore-sync
+    image: 'tjennerjahn/cryptocoindaemon:dbsync'
+    environment:
+      TASK_SCHEDULE: '*/10 * * * *'
+      NPM_COMMAND: 'start'
+      COIN_NAME: 'phore'
 volumes:
   phore-data:
     external: false
