--- a/polis/docker-compose.yml
+++ b/polis/docker-compose.yml
@@ -11,6 +11,14 @@ services:
       options:
         max-size: 1g
     image: 'tjennerjahn/cryptocoindaemon:polis'
+  polis_sync:
+    network_mode: "host"
+    container_name: polis-sync
+    image: 'tjennerjahn/cryptocoindaemon:dbsync'
+    environment:
+      TASK_SCHEDULE: '*/10 * * * *'
+      NPM_COMMAND: 'start'
+      COIN_NAME: 'polis'
 volumes:
   polis-data:
     external: false
