--- a/dash/docker-compose.yml
+++ b/dash/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     container_name: dash-sync
     image: 'tjennerjahn/cryptocoindaemon:dbsync'
     environment:
-      TASK_SCHEDULE: '* * * * *'
+      TASK_SCHEDULE: '*/10 * * * *'
       NPM_COMMAND: 'start'
       COIN_NAME: 'dash'
 volumes:
