--- a/blocknet/docker-compose.yml
+++ b/blocknet/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3'
 services:
   blocknet:
-    build: .
     network_mode: "host"
     volumes:
       - 'blocknet-data:/blocknet'
@@ -11,6 +10,14 @@ services:
       options:
         max-size: 1g
     image: 'tjennerjahn/cryptocoindaemon:blocknet'
+  blocknet_sync:
+    network_mode: "host"
+    container_name: blocknet-sync
+    image: 'tjennerjahn/cryptocoindaemon:dbsync'
+    environment:
+      TASK_SCHEDULE: '*/10 * * * *'
+      NPM_COMMAND: 'start'
+      COIN_NAME: 'blocknet'
 volumes:
   blocknet-data:
     external: false
