--- a/pivx/docker-compose.yml
+++ b/pivx/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     container_name: pivx-sync
     image: 'tjennerjahn/cryptocoindaemon:dbsync'
     environment:
-      TASK_SCHEDULE: '* * * * *'
+      TASK_SCHEDULE: '*/10 * * * *'
       NPM_COMMAND: 'start'
       COIN_NAME: 'pivx'
 volumes:
