--- a/merebel/docker-compose.yml
+++ b/merebel/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3'
 services:
   merebel:
-    build: .
     network_mode: "host"
     volumes:
       - 'merebel-data:/merebel'
@@ -11,6 +10,14 @@ services:
       options:
         max-size: 1g
     image: 'tjennerjahn/cryptocoindaemon:merebel'
+  merebel_sync:
+    network_mode: "host"
+    container_name: merebel-sync
+    image: 'tjennerjahn/cryptocoindaemon:dbsync'
+    environment:
+      TASK_SCHEDULE: '*/10 * * * *'
+      NPM_COMMAND: 'start'
+      COIN_NAME: 'merebel'
 volumes:
   merebel-data:
     external: false
