--- a/energi/docker-compose.yml
+++ b/energi/docker-compose.yml
@@ -11,6 +11,14 @@ services:
       options:
         max-size: 1g
     image: 'tjennerjahn/cryptocoindaemon:energi'
+  energi_sync:
+    network_mode: "host"
+    container_name: energi-sync
+    image: 'tjennerjahn/cryptocoindaemon:dbsync'
+    environment:
+      TASK_SCHEDULE: '*/10 * * * *'
+      NPM_COMMAND: 'start'
+      COIN_NAME: 'energi'
 volumes:
   energi-data:
     external: false
