--- a/esbc/docker-compose.yml
+++ b/esbc/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3'
 services:
   esbc:
-    build: .
     network_mode: "host"
     volumes:
       - 'esbc-data:/esbc'
@@ -11,6 +10,14 @@ services:
       options:
         max-size: 1g
     image: 'tjennerjahn/cryptocoindaemon:esbc'
+  esbc_sync:
+  network_mode: "host"
+  container_name: esbc-sync
+  image: 'tjennerjahn/cryptocoindaemon:dbsync'
+  environment:
+    TASK_SCHEDULE: '*/10 * * * *'
+    NPM_COMMAND: 'start'
+    COIN_NAME: 'esbc'
 volumes:
   esbc-data:
     external: false
